# ccombine

./: .flake8  .gitignore  LICENSE  README.md  ccombine.py  combine.py  go.sh  pyproject.toml  setup.cfg
benchmark/: README.md  combine.sh  setup-and-run.sh
source/: ccombine.py
source/ccombine/: __init__.py
