[metadata]
name = ccombine
version = 0.1.0
description = A C/C++ bundler
license = 0BSD
author = Aman Verma
url = 'https://github.com/a-vrma/ccombine'
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Pre-processors

[options]
package_dir = =source
packages = ccombine
python_requires = >= 3.7
[options.entry_points]
console_scripts = ccombine = ccombine:main
