[metadata]
name = ccombine
version = attr: ccombine.__version__
description = A C/C++ bundler
license = 0BSD
author = Aman Verma
url = https://github.com/a-vrma/ccombine

[options]
py_modules = ccombine
python_requires = >= 3.7
[options.extras_require]
dev =
    flake8
    flake8-bugbear
    mypy
    isort
[options.entry_points]
console_scripts = ccombine=ccombine:main
# vim: ft=dosini
