[metadata]
name = ccombine
version = attr: ccombine.__version__
description = A C/C++ bundler
license = 0BSD
author = Aman Verma
url = https://github.com/averms/ccombine

[options]
package_dir = =source
py_modules = ccombine
python_requires = >= 3.7
[options.extras_require]
dev =
    flake8-bugbear
    mypy
    isort
[options.entry_points]
console_scripts = ccombine=ccombine:main

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501,F841,E302

# vim: ft=dosini
